--- a/.github/workflows/python-publish-win.yml
+++ b/.github/workflows/python-publish-win.yml
@@ -28,10 +28,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Get the version
-      id: get_version
-      run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
-    - name: Install dependencies ${{ steps.get_version.outputs.VERSION }}
+    - name: Set output
+      id: vars
+      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+    - name: Check output
+      env:
+        RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+      run: |
+        echo $RELEASE_VERSION
+        echo ${{ steps.vars.outputs.tag }}
+    - name: Install dependencies
       run: |
         echo ${GITHUB_REF}
         python -m pip install --upgrade pip
