--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,10 +28,12 @@ jobs:
             ext_name: so
             opt_name: mv
             del_name: rm
+            pip_name: cityhash
           - os: windows-latest
             ext_name: pyd
             opt_name: move
             del_name: del
+            pip_name: pip
         python-version: ['3.6','3.7','3.8','3.9']
     steps:
     - uses: actions/checkout@v2
@@ -42,7 +44,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-asyncio cython
+        python -m pip install flake8 pytest pytest-asyncio cython ${{ matrix.pip_name }}
         python -m pip install -r requirements.txt
     - name: Lint with flake8
       run: |
@@ -54,6 +56,7 @@ jobs:
       working-directory: ./src
       run: |
         python lib_setup.py build_ext --inplace
+        python cityhash_setup.py build_ext --inplace
         ${{ matrix.opt_name }} *.${{ matrix.ext_name }} ../fnvhash_c
     - name: Test with pytest
       run: |
