--- a/.github/workflows/python-publish-win.yml
+++ b/.github/workflows/python-publish-win.yml
@@ -19,8 +19,7 @@ jobs:
             ext_name: pyd
             opt_name: move
             del_name: del
-        # python-version: ['3.6','3.7','3.8','3.9']
-        python-version: ['3.9']
+        python-version: ['3.6','3.7','3.8','3.9']
 
     steps:
     - uses: actions/checkout@v2
@@ -28,30 +27,25 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set output
-      id: vars
-      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-    - name: Check output
-      env:
-        RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
-      run: |
-        echo $RELEASE_VERSION
-        echo ${{ steps.vars.outputs.tag }}
+    - name: Get latest release version number
+      id: get_version
+      uses: battila7/get-version-action@v2
     - name: Install dependencies
       run: |
-        echo ${GITHUB_REF}
+        echo ${{ steps.get_version.outputs.version-without-v }} >> tagname
         python -m pip install --upgrade pip
         pip install setuptools wheel twine requests beautifulsoup4 lxml cython
     - name: Build binary
       working-directory: ./src
       run: |
         python lib_setup.py build_ext --inplace
+        python cityhash_setup.py build_ext --inplace
         ${{ matrix.opt_name }} *.${{ matrix.ext_name }} ../fnvhash_c
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py bdist_wheel
-        # python publish_rename.py ${{ matrix.python-version }}
-        twine upload --repository testpypi dist/*
+        python setup.py bdist_wheel 
+        # twine upload --repository testpypi dist/*
+        twine upload dist/*
