--- a/.github/workflows/python-publish-win.yml
+++ b/.github/workflows/python-publish-win.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         echo ${{ steps.get_version.outputs.version-without-v }} >> tagname
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-asyncio cython ${{ matrix.pip_name }}
+        python -m pip install flake8 
     - name: Lint with flake8 for syntax errors
       run: |
         pip install flake8
@@ -50,7 +50,7 @@ jobs:
       uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
       with:
         python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
-        build-requirements: 'cython'
+        build-requirements: 'cython requests beautifulsoup4 lxml'
     - name: Publish wheels to PyPI
       working-directory: ./src
       run: |
