--- a/.github/workflows/python-publish-win.yml
+++ b/.github/workflows/python-publish-win.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches:
       - 'main'
-      - '[0-9].[0-9]+'  # matches to backport branches, e.g. 3.6
+      - '[0-9].[0-9]+.[0-9]+'  # matches to backport branches, e.g. 3.6
       - dev
   pull_request:
     branches:
       - 'main'
-      - '[0-9].[0-9]+'
+      - '[0-9].[0-9]+.[0-9]+'
   schedule:
     - cron:  '0 9 1 * *'  # Runs at 09:00 UTC on the 1st of every month
 
